fix: add visible FAQ sections to all tool pages - JSON-LD content must be visible on page per Google guidelines

--- a/arrange-screenshots-for-presentation.html
+++ b/arrange-screenshots-for-presentation.html
@@ -203,6 +203,20 @@
             </ol>
 
             <p>The result is a clean, professional-looking image that fits naturally into any slide or document. Your screenshots look intentional, organized, and easy to understand at a glance.</p>
+            <!-- FAQ Section (visible content matching JSON-LD) -->
+            <section class="faq-section" style="margin-top:3rem;padding:2rem;background:#f8fafc;border-radius:12px;">
+                <h2 style="font-size:1.25rem;margin-bottom:1.5rem;color:#111827;">Frequently Asked Questions</h2>
+                
+                <div class="faq-item" style="margin-bottom:1.5rem;">
+                    <h3 style="font-size:1rem;font-weight:600;color:#1f2937;margin-bottom:0.5rem;">How do I arrange screenshots for a presentation?</h3>
+                    <p style="color:#6b7280;margin:0;">Upload your screenshots to PictriKit, select a presentation-friendly layout, and export the arranged image to use in your slides.</p>
+                </div>
+                
+                <div class="faq-item" style="margin-bottom:0;">
+                    <h3 style="font-size:1rem;font-weight:600;color:#1f2937;margin-bottom:0.5rem;">What formats can I export?</h3>
+                    <p style="color:#6b7280;margin:0;">You can export as PNG or JPG in high resolution.</p>
+                </div>
+            </section>
 
             <div class="cta-section">
                 <h2>Ready to arrange your screenshots?</h2>
@@ -265,7 +279,7 @@
                     <a href="/stack-screenshots-vertically.html" style="color: #6b7280; text-decoration: none;">Stack Vertically</a>
                     <a href="/screenshot-grid-layout.html" style="color: #6b7280; text-decoration: none;">Grid Layout</a>
                 </div>
-            </div><div style="color: #6b7280; font-size: 0.8125rem;">濠?2026 PictriKit</div>
+            </div><div style="color: #6b7280; font-size: 0.8125rem;">婵?2026 PictriKit</div>
             <div style="display: flex; gap: 1.5rem;">
                 <a href="/privacy.html">Privacy</a>
                 <a href="/terms.html">Terms</a>
