--- a/combine-chat-screenshots.html
+++ b/combine-chat-screenshots.html
@@ -211,6 +211,20 @@
             </ol>
 
             <p>The result is a single, scrollable image that preserves the full conversation. No cropping, no rearranging, no design work. Just your chat screenshots stacked cleanly from top to bottom.</p>
+            <!-- FAQ Section (visible content matching JSON-LD) -->
+            <section class="faq-section" style="margin-top:3rem;padding:2rem;background:#f8fafc;border-radius:12px;">
+                <h2 style="font-size:1.25rem;margin-bottom:1.5rem;color:#111827;">Frequently Asked Questions</h2>
+                
+                <div class="faq-item" style="margin-bottom:1.5rem;">
+                    <h3 style="font-size:1rem;font-weight:600;color:#1f2937;margin-bottom:0.5rem;">How do I combine multiple chat screenshots?</h3>
+                    <p style="color:#6b7280;margin:0;">Upload your chat screenshots to PictriKit in order, and they will be automatically stacked vertically into one long image.</p>
+                </div>
+                
+                <div class="faq-item" style="margin-bottom:0;">
+                    <h3 style="font-size:1rem;font-weight:600;color:#1f2937;margin-bottom:0.5rem;">Does this work with WhatsApp screenshots?</h3>
+                    <p style="color:#6b7280;margin:0;">Yes, PictriKit works with screenshots from any chat app including WhatsApp, iMessage, Telegram, and WeChat.</p>
+                </div>
+            </section>
 
             <div class="cta-section">
                 <h2>Ready to combine your chat screenshots?</h2>
@@ -273,7 +287,7 @@
                     <a href="/stack-screenshots-vertically.html" style="color: #6b7280; text-decoration: none;">Stack Vertically</a>
                     <a href="/screenshot-grid-layout.html" style="color: #6b7280; text-decoration: none;">Grid Layout</a>
                 </div>
-            </div><div style="color: #6b7280; font-size: 0.8125rem;">濠?2026 PictriKit</div>
+            </div><div style="color: #6b7280; font-size: 0.8125rem;">婵?2026 PictriKit</div>
             <div style="display: flex; gap: 1.5rem;">
                 <a href="/privacy.html">Privacy</a>
                 <a href="/terms.html">Terms</a>
