--- a/put-two-screenshots-together.html
+++ b/put-two-screenshots-together.html
@@ -205,6 +205,20 @@
             </ol>
 
             <p>The result is one clean image with both screenshots properly arranged. No resizing, no dragging, no guessing. Just two images put together the way you wanted.</p>
+            <!-- FAQ Section (visible content matching JSON-LD) -->
+            <section class="faq-section" style="margin-top:3rem;padding:2rem;background:#f8fafc;border-radius:12px;">
+                <h2 style="font-size:1.25rem;margin-bottom:1.5rem;color:#111827;">Frequently Asked Questions</h2>
+                
+                <div class="faq-item" style="margin-bottom:1.5rem;">
+                    <h3 style="font-size:1rem;font-weight:600;color:#1f2937;margin-bottom:0.5rem;">How do I put two screenshots together?</h3>
+                    <p style="color:#6b7280;margin:0;">Upload both screenshots to PictriKit, choose side-by-side or vertical layout, and export as one image.</p>
+                </div>
+                
+                <div class="faq-item" style="margin-bottom:0;">
+                    <h3 style="font-size:1rem;font-weight:600;color:#1f2937;margin-bottom:0.5rem;">Can I adjust the spacing between images?</h3>
+                    <p style="color:#6b7280;margin:0;">Yes, PictriKit allows you to customize spacing and padding.</p>
+                </div>
+            </section>
 
             <div class="cta-section">
                 <h2>Ready to put your screenshots together?</h2>
@@ -267,7 +281,7 @@
                     <a href="/stack-screenshots-vertically.html" style="color: #6b7280; text-decoration: none;">Stack Vertically</a>
                     <a href="/screenshot-grid-layout.html" style="color: #6b7280; text-decoration: none;">Grid Layout</a>
                 </div>
-            </div><div style="color: #6b7280; font-size: 0.8125rem;">濠?2026 PictriKit</div>
+            </div><div style="color: #6b7280; font-size: 0.8125rem;">婵?2026 PictriKit</div>
             <div style="display: flex; gap: 1.5rem;">
                 <a href="/privacy.html">Privacy</a>
                 <a href="/terms.html">Terms</a>
