--- a/screenshot-grid-layout.html
+++ b/screenshot-grid-layout.html
@@ -182,7 +182,7 @@
             <p>Creating a grid manually means resizing each image to the same dimensions, calculating spacing, and aligning everything precisely. If one image is slightly larger or the gaps aren't consistent, the whole grid looks off. It's tedious work that takes attention away from your actual content.</p>
 
             <h2>Structured grids without the work</h2>
-            <p>With a grid layout tool, you choose the structure闂?x2, 2x3, 3x3闂備胶鍋ㄩ崕鏌ュ绩椤ょ place your screenshots into it. The layout handles sizing and spacing automatically. Every cell is the same size, every gap is consistent, and every image is centered within its space.</p>
+            <p>With a grid layout tool, you choose the structure闂?x2, 2x3, 3x3闂傚倷鑳堕崑銊╁磿閺屻儱缁╂い銈囶梾 place your screenshots into it. The layout handles sizing and spacing automatically. Every cell is the same size, every gap is consistent, and every image is centered within its space.</p>
 
             <h2>What you can do</h2>
             <p>With grid layouts, you can:</p>
@@ -210,6 +210,20 @@
             </ol>
 
             <p>The result is a clean, organized grid where every screenshot has equal visual weight. No manual resizing, no alignment guesswork, just a structured layout that presents your images clearly.</p>
+            <!-- FAQ Section (visible content matching JSON-LD) -->
+            <section class="faq-section" style="margin-top:3rem;padding:2rem;background:#f8fafc;border-radius:12px;">
+                <h2 style="font-size:1.25rem;margin-bottom:1.5rem;color:#111827;">Frequently Asked Questions</h2>
+                
+                <div class="faq-item" style="margin-bottom:1.5rem;">
+                    <h3 style="font-size:1rem;font-weight:600;color:#1f2937;margin-bottom:0.5rem;">How do I create a screenshot grid?</h3>
+                    <p style="color:#6b7280;margin:0;">Select a grid layout in PictriKit, upload your screenshots, and they will be automatically arranged in a clean grid format.</p>
+                </div>
+                
+                <div class="faq-item" style="margin-bottom:0;">
+                    <h3 style="font-size:1rem;font-weight:600;color:#1f2937;margin-bottom:0.5rem;">What grid sizes are available?</h3>
+                    <p style="color:#6b7280;margin:0;">PictriKit supports 2x2, 2x3, 3x3 and custom grid layouts.</p>
+                </div>
+            </section>
 
             <div class="cta-section">
                 <h2>Ready to create a screenshot grid?</h2>
@@ -272,7 +286,7 @@
                     <a href="/stack-screenshots-vertically.html" style="color: #6b7280; text-decoration: none;">Stack Vertically</a>
                     <a href="/screenshot-grid-layout.html" style="color: #6b7280; text-decoration: none;">Grid Layout</a>
                 </div>
-            </div><div style="color: #6b7280; font-size: 0.8125rem;">濠?2026 PictriKit</div>
+            </div><div style="color: #6b7280; font-size: 0.8125rem;">婵?2026 PictriKit</div>
             <div style="display: flex; gap: 1.5rem;">
                 <a href="/privacy.html">Privacy</a>
                 <a href="/terms.html">Terms</a>
