--- a/stack-screenshots-vertically.html
+++ b/stack-screenshots-vertically.html
@@ -205,6 +205,20 @@
             </ol>
 
             <p>The result is a single vertical image that flows naturally from top to bottom. No gaps between screenshots, no manual stitching, and no lost context. Just your content, stacked cleanly in one file.</p>
+            <!-- FAQ Section (visible content matching JSON-LD) -->
+            <section class="faq-section" style="margin-top:3rem;padding:2rem;background:#f8fafc;border-radius:12px;">
+                <h2 style="font-size:1.25rem;margin-bottom:1.5rem;color:#111827;">Frequently Asked Questions</h2>
+                
+                <div class="faq-item" style="margin-bottom:1.5rem;">
+                    <h3 style="font-size:1rem;font-weight:600;color:#1f2937;margin-bottom:0.5rem;">How do I stack screenshots vertically?</h3>
+                    <p style="color:#6b7280;margin:0;">Upload your screenshots to PictriKit in order, select vertical stack layout, and export as one continuous image.</p>
+                </div>
+                
+                <div class="faq-item" style="margin-bottom:0;">
+                    <h3 style="font-size:1rem;font-weight:600;color:#1f2937;margin-bottom:0.5rem;">Is there a limit to how many screenshots I can stack?</h3>
+                    <p style="color:#6b7280;margin:0;">No, you can stack as many screenshots as you need.</p>
+                </div>
+            </section>
 
             <div class="cta-section">
                 <h2>Ready to stack your screenshots?</h2>
@@ -267,7 +281,7 @@
                     <a href="/stack-screenshots-vertically.html" style="color: #6b7280; text-decoration: none;">Stack Vertically</a>
                     <a href="/screenshot-grid-layout.html" style="color: #6b7280; text-decoration: none;">Grid Layout</a>
                 </div>
-            </div><div style="color: #6b7280; font-size: 0.8125rem;">濠?2026 PictriKit</div>
+            </div><div style="color: #6b7280; font-size: 0.8125rem;">婵?2026 PictriKit</div>
             <div style="display: flex; gap: 1.5rem;">
                 <a href="/privacy.html">Privacy</a>
                 <a href="/terms.html">Terms</a>
