--- a/align-screenshots-centered.html
+++ b/align-screenshots-centered.html
@@ -179,7 +179,7 @@
             <p>Most tools let you drag images around freely, which sounds flexible but creates problems. You nudge an image left, then right, then left again. You zoom in to check if it's really centered. You use alignment guides that sometimes help and sometimes don't. For something so basic, it takes too much effort.</p>
 
             <h2>Automatic centering that just works</h2>
-            <p>This tool centers every screenshot automatically. When you place an image into a layout slot, it's centered by default闂備胶鍋ㄩ崕鏌ュ绩椤︽檯h horizontally and vertically. You don't drag, you don't nudge, you don't guess. The image goes where it belongs, and it stays there.</p>
+            <p>This tool centers every screenshot automatically. When you place an image into a layout slot, it's centered by default闂傚倷鑳堕崑銊╁磿閺屻儱缁╂い锔芥h horizontally and vertically. You don't drag, you don't nudge, you don't guess. The image goes where it belongs, and it stays there.</p>
 
             <h2>What you can do</h2>
             <p>With automatic centering, you can:</p>
@@ -207,6 +207,20 @@
             </ol>
 
             <p>The result is a layout where every screenshot sits exactly where it should. No dragging, no guessing, no pixel-level adjustments. Just clean, centered alignment that looks right.</p>
+            <!-- FAQ Section (visible content matching JSON-LD) -->
+            <section class="faq-section" style="margin-top:3rem;padding:2rem;background:#f8fafc;border-radius:12px;">
+                <h2 style="font-size:1.25rem;margin-bottom:1.5rem;color:#111827;">Frequently Asked Questions</h2>
+                
+                <div class="faq-item" style="margin-bottom:1.5rem;">
+                    <h3 style="font-size:1rem;font-weight:600;color:#1f2937;margin-bottom:0.5rem;">How do I center align my screenshots?</h3>
+                    <p style="color:#6b7280;margin:0;">Upload your screenshots to PictriKit and they will be automatically centered in the layout. No manual adjustment needed.</p>
+                </div>
+                
+                <div class="faq-item" style="margin-bottom:0;">
+                    <h3 style="font-size:1rem;font-weight:600;color:#1f2937;margin-bottom:0.5rem;">Is this tool free?</h3>
+                    <p style="color:#6b7280;margin:0;">Yes, PictriKit is completely free with no registration required.</p>
+                </div>
+            </section>
 
             <div class="cta-section">
                 <h2>Ready to align your screenshots?</h2>
@@ -269,7 +283,7 @@
                     <a href="/stack-screenshots-vertically.html" style="color: #6b7280; text-decoration: none;">Stack Vertically</a>
                     <a href="/screenshot-grid-layout.html" style="color: #6b7280; text-decoration: none;">Grid Layout</a>
                 </div>
-            </div><div style="color: #6b7280; font-size: 0.8125rem;">濠?2026 PictriKit</div>
+            </div><div style="color: #6b7280; font-size: 0.8125rem;">婵?2026 PictriKit</div>
             <div style="display: flex; gap: 1.5rem;">
                 <a href="/privacy.html">Privacy</a>
                 <a href="/terms.html">Terms</a>
