--- a/compare-ui-screenshots.html
+++ b/compare-ui-screenshots.html
@@ -175,7 +175,7 @@
             </div>
 
             <h2>Why UI comparison matters</h2>
-            <p>Interface design is about details. A button moved slightly, a color changed, a layout adjusted闂備胶鍋ㄩ崕鏌ュ极閸掔尃se differences are hard to spot when you're looking at screenshots separately. Placing them side by side lets you see exactly what changed and whether the change works. It's essential for design reviews, stakeholder presentations, and documentation.</p>
+            <p>Interface design is about details. A button moved slightly, a color changed, a layout adjusted闂傚倷鑳堕崑銊╁磿閺屻儱鏋侀柛鎺斿皟se differences are hard to spot when you're looking at screenshots separately. Placing them side by side lets you see exactly what changed and whether the change works. It's essential for design reviews, stakeholder presentations, and documentation.</p>
 
             <h2>The problem with ad-hoc comparisons</h2>
             <p>Opening two screenshots in separate windows and switching between them doesn't give you a true comparison. Pasting them into a slide deck often results in mismatched sizes and awkward spacing. You end up spending time on layout instead of focusing on the actual UI differences you're trying to evaluate.</p>
@@ -209,6 +209,20 @@
             </ol>
 
             <p>The result is a clean comparison that shows both interfaces clearly. No distractions, no layout issues, just the UI differences you need to see and share.</p>
+            <!-- FAQ Section (visible content matching JSON-LD) -->
+            <section class="faq-section" style="margin-top:3rem;padding:2rem;background:#f8fafc;border-radius:12px;">
+                <h2 style="font-size:1.25rem;margin-bottom:1.5rem;color:#111827;">Frequently Asked Questions</h2>
+                
+                <div class="faq-item" style="margin-bottom:1.5rem;">
+                    <h3 style="font-size:1rem;font-weight:600;color:#1f2937;margin-bottom:0.5rem;">How do I compare UI screenshots?</h3>
+                    <p style="color:#6b7280;margin:0;">Upload your UI screenshots to PictriKit, choose a comparison layout, and export a clean side-by-side comparison showing the differences.</p>
+                </div>
+                
+                <div class="faq-item" style="margin-bottom:0;">
+                    <h3 style="font-size:1rem;font-weight:600;color:#1f2937;margin-bottom:0.5rem;">Is this useful for design reviews?</h3>
+                    <p style="color:#6b7280;margin:0;">Yes, it is perfect for UI/UX design reviews, bug reports, and showing design iterations.</p>
+                </div>
+            </section>
 
             <div class="cta-section">
                 <h2>Ready to compare your UI screenshots?</h2>
@@ -271,7 +285,7 @@
                     <a href="/stack-screenshots-vertically.html" style="color: #6b7280; text-decoration: none;">Stack Vertically</a>
                     <a href="/screenshot-grid-layout.html" style="color: #6b7280; text-decoration: none;">Grid Layout</a>
                 </div>
-            </div><div style="color: #6b7280; font-size: 0.8125rem;">濠?2026 PictriKit</div>
+            </div><div style="color: #6b7280; font-size: 0.8125rem;">婵?2026 PictriKit</div>
             <div style="display: flex; gap: 1.5rem;">
                 <a href="/privacy.html">Privacy</a>
                 <a href="/terms.html">Terms</a>
