feat: homepage - add two-row comparison (Others vs Us + Before/After with image placeholders), enlarge Three Steps screenshots

--- a/index.html
+++ b/index.html
@@ -512,29 +512,51 @@ Open Web Editor
 </a>
 </div>
 
-<!-- Hero Image: Before vs After -->
-<div class="hero-image" style="margin: 2rem auto; max-width: 800px;">
-<div style="display: grid; grid-template-columns: 1fr auto 1fr; gap: 1rem; align-items: center;">
-<div style="background: #f1f5f9; border-radius: 12px; padding: 1rem; text-align: center;">
-<div style="font-size: 0.75rem; color: #6b7280; margin-bottom: 0.5rem; text-transform: uppercase; font-weight: 600;">Before</div>
-<div style="display: flex; flex-direction: column; gap: 0.5rem;">
-<div style="background: #e2e8f0; height: 60px; border-radius: 8px;"></div>
-<div style="background: #e2e8f0; height: 60px; border-radius: 8px;"></div>
-<div style="background: #e2e8f0; height: 60px; border-radius: 8px;"></div>
-</div>
-<div style="font-size: 0.75rem; color: #9ca3af; margin-top: 0.5rem;">Scattered screenshots</div>
-</div>
-<div style="font-size: 2rem; color: #007AFF;">→</div>
-<div style="background: linear-gradient(135deg, #dbeafe, #e0e7ff); border-radius: 12px; padding: 1rem; text-align: center; border: 2px solid #007AFF;">
-<div style="font-size: 0.75rem; color: #007AFF; margin-bottom: 0.5rem; text-transform: uppercase; font-weight: 600;">After</div>
-<div style="display: grid; grid-template-columns: 1fr 1fr; gap: 0.5rem;">
-<div style="background: #007AFF; height: 60px; border-radius: 8px; opacity: 0.3;"></div>
-<div style="background: #007AFF; height: 60px; border-radius: 8px; opacity: 0.3;"></div>
-<div style="background: #007AFF; height: 60px; border-radius: 8px; opacity: 0.3; grid-column: span 2;"></div>
-</div>
-<div style="font-size: 0.75rem; color: #007AFF; margin-top: 0.5rem;">Clean grid layout</div>
-</div>
-</div>
+<!-- Hero Comparison Section: Two Rows -->
+<div class="hero-comparison" style="margin: 2.5rem auto; max-width: 900px;">
+  
+  <!-- Row 1: Others vs Us (示意图) -->
+  <div style="display: grid; grid-template-columns: 1fr auto 1fr; gap: 1.5rem; align-items: center; margin-bottom: 2rem;">
+    <div style="background: #fef2f2; border-radius: 12px; padding: 1.25rem; text-align: center; border: 1px solid #fecaca;">
+      <div style="font-size: 0.75rem; color: #dc2626; margin-bottom: 0.75rem; text-transform: uppercase; font-weight: 600;">Others</div>
+      <div style="display: flex; flex-direction: column; gap: 0.5rem;">
+        <div style="background: #fca5a5; height: 50px; border-radius: 8px; opacity: 0.6;"></div>
+        <div style="background: #fca5a5; height: 50px; border-radius: 8px; opacity: 0.6;"></div>
+        <div style="background: #fca5a5; height: 50px; border-radius: 8px; opacity: 0.6;"></div>
+      </div>
+      <div style="font-size: 0.7rem; color: #9ca3af; margin-top: 0.5rem;">Scattered, messy layouts</div>
+    </div>
+    <div style="font-size: 2rem; color: #007AFF; font-weight: bold;">→</div>
+    <div style="background: linear-gradient(135deg, #dbeafe, #e0e7ff); border-radius: 12px; padding: 1.25rem; text-align: center; border: 2px solid #007AFF;">
+      <div style="font-size: 0.75rem; color: #007AFF; margin-bottom: 0.75rem; text-transform: uppercase; font-weight: 600;">PictriKit</div>
+      <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 0.5rem;">
+        <div style="background: #007AFF; height: 50px; border-radius: 8px; opacity: 0.4;"></div>
+        <div style="background: #007AFF; height: 50px; border-radius: 8px; opacity: 0.4;"></div>
+        <div style="background: #007AFF; height: 50px; border-radius: 8px; opacity: 0.4; grid-column: span 2;"></div>
+      </div>
+      <div style="font-size: 0.7rem; color: #007AFF; margin-top: 0.5rem;">Clean, professional grids</div>
+    </div>
+  </div>
+  
+  <!-- Row 2: Before vs After (真实图片占位) -->
+  <div style="display: grid; grid-template-columns: 1fr auto 1fr; gap: 1.5rem; align-items: center;">
+    <div style="background: #f8fafc; border-radius: 12px; padding: 0.75rem; text-align: center; border: 1px solid #e2e8f0;">
+      <div style="font-size: 0.75rem; color: #6b7280; margin-bottom: 0.5rem; text-transform: uppercase; font-weight: 600;">Before</div>
+      <div style="background: #e2e8f0; border-radius: 8px; min-height: 120px; display: flex; align-items: center; justify-content: center; overflow: hidden;">
+        <img src="./assets/images/hero-before.png" alt="Before - Messy screenshots" style="width: 100%; height: auto; display: block;" onerror="this.style.display='none'; this.parentElement.innerHTML='<span style=color:#9ca3af;font-size:0.75rem;>Image placeholder</span>';" />
+      </div>
+      <div style="font-size: 0.7rem; color: #9ca3af; margin-top: 0.5rem;">Raw screenshots</div>
+    </div>
+    <div style="font-size: 2rem; color: #10b981; font-weight: bold;">→</div>
+    <div style="background: #f0fdf4; border-radius: 12px; padding: 0.75rem; text-align: center; border: 2px solid #10b981;">
+      <div style="font-size: 0.75rem; color: #10b981; margin-bottom: 0.5rem; text-transform: uppercase; font-weight: 600;">After</div>
+      <div style="background: #dcfce7; border-radius: 8px; min-height: 120px; display: flex; align-items: center; justify-content: center; overflow: hidden;">
+        <img src="./assets/images/hero-after.png" alt="After - Beautiful layout" style="width: 100%; height: auto; display: block;" onerror="this.style.display='none'; this.parentElement.innerHTML='<span style=color:#10b981;font-size:0.75rem;>Image placeholder</span>';" />
+      </div>
+      <div style="font-size: 0.7rem; color: #10b981; margin-top: 0.5rem;">Professional layout</div>
+    </div>
+  </div>
+  
 </div>
 
 <div class="hero-trust">
@@ -675,8 +697,8 @@ Open Web Editor
 </ul>
 </div>
 <div class="showcase-image">
-<div class="screenshot-frame">
-<img src="./assets/screenshots/PictriKit-Screenshot-Layout-Tool-01-06-2026_12_09_AM2.png" alt="PictriKit Focus Layouts Panel" loading="lazy" />
+<div class="screenshot-frame" style="max-width: 600px;">
+<img src="./assets/screenshots/PictriKit-Screenshot-Layout-Tool-01-06-2026_12_09_AM2.png" alt="PictriKit Focus Layouts Panel" loading="lazy" style="width: 100%; height: auto;" />
 </div>
 </div>
 </div>
@@ -715,8 +737,8 @@ Open Web Editor
 </ul>
 </div>
 <div class="showcase-image">
-<div class="screenshot-frame">
-<img src="./assets/screenshots/PictriKit-Screenshot-Layout-Tool-01-06-2026_12_09_AM.png" alt="PictriKit Style Settings Panel" loading="lazy" />
+<div class="screenshot-frame" style="max-width: 600px;">
+<img src="./assets/screenshots/PictriKit-Screenshot-Layout-Tool-01-06-2026_12_09_AM.png" alt="PictriKit Style Settings Panel" loading="lazy" style="width: 100%; height: auto;" />
 </div>
 </div>
 </div>
@@ -755,8 +777,8 @@ Open Web Editor
 </ul>
 </div>
 <div class="showcase-image">
-<div class="screenshot-frame">
-<img src="./assets/screenshots/PictriKit-Screenshot-Layout-Tool-01-06-2026_12_10_AM.png" alt="PictriKit Device Frames Panel" loading="lazy" />
+<div class="screenshot-frame" style="max-width: 600px;">
+<img src="./assets/screenshots/PictriKit-Screenshot-Layout-Tool-01-06-2026_12_10_AM.png" alt="PictriKit Device Frames Panel" loading="lazy" style="width: 100%; height: auto;" />
 </div>
 </div>
 </div>
