fix: homepage UI - clean before/after comparison with real images, larger screenshots, fix encoding issues (漏©, 脳)

--- a/app.html
+++ b/app.html
@@ -750,19 +750,19 @@
         <div style="display:grid;grid-template-columns:1fr 1fr;gap:8px;">
           <button data-layout-type="grid-2x2" class="layout-card" style="aspect-ratio:4/3;border-radius:10px;background:var(--bg-card);border:1px solid #3d3d3d;cursor:pointer;display:flex;flex-direction:column;align-items:center;justify-content:center;gap:8px;padding:12px;">
             <div style="display:grid;grid-template-columns:1fr 1fr;gap:3px;width:75%;height:50%;"><div style="background:linear-gradient(135deg, #3b82f6 0%, #60a5fa 100%);border-radius:4px;"></div><div style="background:linear-gradient(135deg, #10b981 0%, #34d399 100%);border-radius:4px;"></div><div style="background:linear-gradient(135deg, #f59e0b 0%, #fbbf24 100%);border-radius:4px;"></div><div style="background:linear-gradient(135deg, #8b5cf6 0%, #a78bfa 100%);border-radius:4px;"></div></div>
-            <span style="font-size:11px;font-weight:600;color:var(--text-primary);">2脳2 Grid</span>
+            <span style="font-size:11px;font-weight:600;color:var(--text-primary);">22 Grid</span>
           </button>
           <button data-layout-type="grid-1x3" class="layout-card" style="aspect-ratio:4/3;border-radius:10px;background:var(--bg-card);border:1px solid #3d3d3d;cursor:pointer;display:flex;flex-direction:column;align-items:center;justify-content:center;gap:8px;padding:12px;">
             <div style="display:grid;grid-template-columns:1fr 1fr 1fr;gap:3px;width:90%;height:35%;"><div style="background:linear-gradient(135deg, #3b82f6 0%, #60a5fa 100%);border-radius:4px;"></div><div style="background:linear-gradient(135deg, #10b981 0%, #34d399 100%);border-radius:4px;"></div><div style="background:linear-gradient(135deg, #f59e0b 0%, #fbbf24 100%);border-radius:4px;"></div></div>
-            <span style="font-size:11px;font-weight:600;color:var(--text-primary);">1脳3 Grid</span>
+            <span style="font-size:11px;font-weight:600;color:var(--text-primary);">13 Grid</span>
           </button>
           <button data-layout-type="grid-2x3" class="layout-card" style="aspect-ratio:4/3;border-radius:10px;background:var(--bg-card);border:1px solid #3d3d3d;cursor:pointer;display:flex;flex-direction:column;align-items:center;justify-content:center;gap:8px;padding:12px;">
             <div style="display:grid;grid-template-columns:1fr 1fr 1fr;grid-template-rows:1fr 1fr;gap:3px;width:90%;height:50%;"><div style="background:linear-gradient(135deg, #3b82f6 0%, #60a5fa 100%);border-radius:3px;"></div><div style="background:linear-gradient(135deg, #10b981 0%, #34d399 100%);border-radius:3px;"></div><div style="background:linear-gradient(135deg, #f59e0b 0%, #fbbf24 100%);border-radius:3px;"></div><div style="background:linear-gradient(135deg, #8b5cf6 0%, #a78bfa 100%);border-radius:3px;"></div><div style="background:linear-gradient(135deg, #ec4899 0%, #f472b6 100%);border-radius:3px;"></div><div style="background:linear-gradient(135deg, #06b6d4 0%, #22d3ee 100%);border-radius:3px;"></div></div>
-            <span style="font-size:11px;font-weight:600;color:var(--text-primary);">2脳3 Grid</span>
+            <span style="font-size:11px;font-weight:600;color:var(--text-primary);">23 Grid</span>
           </button>
           <button data-layout-type="grid-3x3" class="layout-card" style="aspect-ratio:4/3;border-radius:10px;background:var(--bg-card);border:1px solid #3d3d3d;cursor:pointer;display:flex;flex-direction:column;align-items:center;justify-content:center;gap:8px;padding:12px;">
             <div style="display:grid;grid-template-columns:1fr 1fr 1fr;gap:2px;width:75%;height:50%;"><div style="background:linear-gradient(135deg, #3b82f6 0%, #60a5fa 100%);border-radius:3px;"></div><div style="background:linear-gradient(135deg, #10b981 0%, #34d399 100%);border-radius:3px;"></div><div style="background:linear-gradient(135deg, #f59e0b 0%, #fbbf24 100%);border-radius:3px;"></div><div style="background:linear-gradient(135deg, #8b5cf6 0%, #a78bfa 100%);border-radius:3px;"></div><div style="background:linear-gradient(135deg, #ec4899 0%, #f472b6 100%);border-radius:3px;"></div><div style="background:linear-gradient(135deg, #06b6d4 0%, #22d3ee 100%);border-radius:3px;"></div><div style="background:linear-gradient(135deg, #ef4444 0%, #f87171 100%);border-radius:3px;"></div><div style="background:linear-gradient(135deg, #6366f1 0%, #818cf8 100%);border-radius:3px;"></div><div style="background:linear-gradient(135deg, #84cc16 0%, #a3e635 100%);border-radius:3px;"></div></div>
-            <span style="font-size:11px;font-weight:600;color:var(--text-primary);">3脳3 Grid</span>
+            <span style="font-size:11px;font-weight:600;color:var(--text-primary);">33 Grid</span>
           </button>
         </div>
       </div>
