--- a/tutorials.html
+++ b/tutorials.html
@@ -249,7 +249,7 @@
                     </div>
                     <div class="tutorial-info">
                         <h3>Using Grid Layouts</h3>
-                        <p>Select Grid from the sidebar, choose 2脳2, 2脳3, or 3脳3 arrangement, add your images, and adjust spacing with the Style panel.</p>
+                        <p>Select Grid from the sidebar, choose 22, 23, or 33 arrangement, add your images, and adjust spacing with the Style panel.</p>
                         <div class="tutorial-meta">
                             <span>鈴?3 min</span>
                             <span>馃摎 Beginner</span>
@@ -301,7 +301,7 @@
                 <span class="material-icons-round" style="color: #007AFF;">dashboard_customize</span>
                 <span style="font-weight: 700;">PictriKit</span>
             </div>
-            <div style="color: #9ca3af; font-size: 0.875rem;">漏 2026 PictriKit. All rights reserved.</div>
+            <div style="color: #9ca3af; font-size: 0.875rem;">© 2026 PictriKit. All rights reserved.</div>
             <div style="display: flex; gap: 1.5rem; font-size: 0.875rem;">
                 <a href="/privacy.html">Privacy</a>
                 <a href="/terms.html">Terms</a>
