fix: enlarge hero comparison images and fix encoding issues
- Increased hero-comparison container max-width from 1000px to 1400px
- Increased Before/After card max-width from 420px to 560px
- Fixed garbled characters in tutorials.html (emoji icons)
- Fixed copyright symbol encoding in faq, templates, contact pages
- Fixed back arrow encoding in privacy.html and terms.html
- Fixed grid title encoding in templates.html
- Fixed arrow symbol in changelog.html
- Fixed Chinese comment encoding and heart emoji in feedback.html

--- a/compare-ui-screenshots.html
+++ b/compare-ui-screenshots.html
@@ -11,7 +11,7 @@
 </script>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Compare App UI Screenshots 闂?Side by Side Interface Comparison</title>
+    <title>Compare App UI Screenshots |Side by Side Interface Comparison</title>
     <meta name="description" content="Compare app UI screenshots side by side. Show interface differences, design iterations, or version changes with clean comparison layouts.">
     <link rel="canonical" href="https://www.pictrikit.com/compare-ui-screenshots.html">
     
@@ -106,7 +106,7 @@
         .content h2 { font-size: 1.375rem; font-weight: 600; color: #111827; margin: 2.5rem 0 1rem; }
         .content ul { margin: 1rem 0 1.5rem 0; padding-left: 0; list-style: none; }
         .content ul li { padding: 0.5rem 0; padding-left: 1.5rem; position: relative; color: #475569; }
-        .content ul li::before { content: "闂?; position: absolute; left: 0; color: #007AFF; }
+        .content ul li::before { content: "|; position: absolute; left: 0; color: #007AFF; }
         .content ol { margin: 1rem 0 1.5rem 1.25rem; }
         .content ol li { padding: 0.375rem 0; color: #475569; }
         .example-image { margin: 2rem 0; border-radius: 0.75rem; overflow: hidden; box-shadow: 0 4px 20px rgba(0,0,0,0.08); border: 1px solid #e2e8f0; }
@@ -175,7 +175,7 @@
             </div>
 
             <h2>Why UI comparison matters</h2>
-            <p>Interface design is about details. A button moved slightly, a color changed, a layout adjusted闂傚倷鑳堕崑銊╁磿閺屻儱鏋侀柛鎺斿皟se differences are hard to spot when you're looking at screenshots separately. Placing them side by side lets you see exactly what changed and whether the change works. It's essential for design reviews, stakeholder presentations, and documentation.</p>
+            <p>Interface design is about details. A button moved slightly, a color changed, a layout adjusted—these differences are hard to spot when you're looking at screenshots separately. Placing them side by side lets you see exactly what changed and whether the change works. It's essential for design reviews, stakeholder presentations, and documentation.</p>
 
             <h2>The problem with ad-hoc comparisons</h2>
             <p>Opening two screenshots in separate windows and switching between them doesn't give you a true comparison. Pasting them into a slide deck often results in mismatched sizes and awkward spacing. You end up spending time on layout instead of focusing on the actual UI differences you're trying to evaluate.</p>
