--- a/privacy.html
+++ b/privacy.html
@@ -51,7 +51,7 @@
 </head>
 <body>
   <header>
-    <a href="/">閳?Back to PictriKit</a>
+    <a href="/">← Back to PictriKit</a>
   </header>
   <div class="container">
     <div class="content">
