--- a/tutorials.html
+++ b/tutorials.html
@@ -238,8 +238,8 @@
                         <h3>Getting Started with PictriKit</h3>
                         <p>Open the editor, choose a layout from the left sidebar, click on image slots to add your screenshots, then export. That's it!</p>
                         <div class="tutorial-meta">
-                            <span>鈴?2 min</span>
-                            <span>馃摎 Beginner</span>
+                            <span>⏱ 2 min</span>
+                            <span>📚 Beginner</span>
                         </div>
                     </div>
                 </a>
@@ -251,8 +251,8 @@
                         <h3>Using Grid Layouts</h3>
                         <p>Select Grid from the sidebar, choose 22, 23, or 33 arrangement, add your images, and adjust spacing with the Style panel.</p>
                         <div class="tutorial-meta">
-                            <span>鈴?3 min</span>
-                            <span>馃摎 Beginner</span>
+                            <span>⏱ 3 min</span>
+                            <span>📚 Beginner</span>
                         </div>
                     </div>
                 </a>
@@ -264,8 +264,8 @@
                         <h3>Adding Device Frames</h3>
                         <p>Click Frames in the sidebar, choose Browser, Phone, or Tablet frame, add your screenshot, and export a professional mockup.</p>
                         <div class="tutorial-meta">
-                            <span>鈴?2 min</span>
-                            <span>馃摎 Beginner</span>
+                            <span>⏱ 2 min</span>
+                            <span>📚 Beginner</span>
                         </div>
                     </div>
                 </a>
@@ -277,8 +277,8 @@
                         <h3>Creating Comparisons</h3>
                         <p>Use Compare layouts for before/after views. Add two or more screenshots, and the tool automatically aligns them for easy comparison.</p>
                         <div class="tutorial-meta">
-                            <span>鈴?2 min</span>
-                            <span>馃摎 Beginner</span>
+                            <span>⏱ 2 min</span>
+                            <span>📚 Beginner</span>
                         </div>
                     </div>
                 </a>
