--- a/align-screenshots-centered.html
+++ b/align-screenshots-centered.html
@@ -11,7 +11,7 @@
 </script>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Align Screenshots Centered 闂?Automatic Centering Tool</title>
+    <title>Align Screenshots Centered |Automatic Centering Tool</title>
     <meta name="description" content="Align screenshots centered automatically. No manual positioning needed. Every image stays perfectly centered in its space.">
     <link rel="canonical" href="https://www.pictrikit.com/align-screenshots-centered.html">
     
@@ -106,7 +106,7 @@
         .content h2 { font-size: 1.375rem; font-weight: 600; color: #111827; margin: 2.5rem 0 1rem; }
         .content ul { margin: 1rem 0 1.5rem 0; padding-left: 0; list-style: none; }
         .content ul li { padding: 0.5rem 0; padding-left: 1.5rem; position: relative; color: #475569; }
-        .content ul li::before { content: "闂?; position: absolute; left: 0; color: #007AFF; }
+        .content ul li::before { content: "|; position: absolute; left: 0; color: #007AFF; }
         .content ol { margin: 1rem 0 1.5rem 1.25rem; }
         .content ol li { padding: 0.375rem 0; color: #475569; }
         .example-image { margin: 2rem 0; border-radius: 0.75rem; overflow: hidden; box-shadow: 0 4px 20px rgba(0,0,0,0.08); border: 1px solid #e2e8f0; }
@@ -179,7 +179,7 @@
             <p>Most tools let you drag images around freely, which sounds flexible but creates problems. You nudge an image left, then right, then left again. You zoom in to check if it's really centered. You use alignment guides that sometimes help and sometimes don't. For something so basic, it takes too much effort.</p>
 
             <h2>Automatic centering that just works</h2>
-            <p>This tool centers every screenshot automatically. When you place an image into a layout slot, it's centered by default闂傚倷鑳堕崑銊╁磿閺屻儱缁╂い锔芥h horizontally and vertically. You don't drag, you don't nudge, you don't guess. The image goes where it belongs, and it stays there.</p>
+            <p>This tool centers every screenshot automatically. When you place an image into a layout slot, it is centered by defaultboth horizontally and vertically. You do not drag, you do not nudge, you do not guess. The image goes where it belongs, and it stays there.</p>
 
             <h2>What you can do</h2>
             <p>With automatic centering, you can:</p>
@@ -283,7 +283,7 @@
                     <a href="/stack-screenshots-vertically.html" style="color: #6b7280; text-decoration: none;">Stack Vertically</a>
                     <a href="/screenshot-grid-layout.html" style="color: #6b7280; text-decoration: none;">Grid Layout</a>
                 </div>
-            </div><div style="color: #6b7280; font-size: 0.8125rem;">婵?2026 PictriKit</div>
+            </div><div style="color: #6b7280; font-size: 0.8125rem;">©2026 PictriKit</div>
             <div style="display: flex; gap: 1.5rem;">
                 <a href="/privacy.html">Privacy</a>
                 <a href="/terms.html">Terms</a>
