--- a/compare-screenshots.html
+++ b/compare-screenshots.html
@@ -11,7 +11,7 @@
 </script>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Compare Screenshots Side by Side Online 闂?Clean Layout Tool</title>
+    <title>Compare Screenshots Side by Side Online |Clean Layout Tool</title>
     <meta name="description" content="Compare screenshots side by side in a clean layout. Arrange multiple screenshots for UI comparison, before-and-after views, or sharing. No design skills required.">
     <link rel="canonical" href="https://www.pictrikit.com/compare-screenshots.html">
     
@@ -168,7 +168,7 @@
         .content h2 { font-size: 1.375rem; font-weight: 600; color: #111827; margin: 2.5rem 0 1rem; }
         .content ul { margin: 1rem 0 1.5rem 0; padding-left: 0; list-style: none; }
         .content ul li { padding: 0.5rem 0; padding-left: 1.5rem; position: relative; color: #475569; }
-        .content ul li::before { content: "闂?; position: absolute; left: 0; color: #007AFF; }
+        .content ul li::before { content: "|; position: absolute; left: 0; color: #007AFF; }
         .content ol { margin: 1rem 0 1.5rem 1.25rem; }
         .content ol li { padding: 0.375rem 0; color: #475569; }
         
