--- a/contact.html
+++ b/contact.html
@@ -226,7 +226,7 @@
                 <span class="material-icons-round" style="color: #007AFF;">dashboard_customize</span>
                 <span style="font-weight: 700;">PictriKit</span>
             </div>
-            <div style="color: #9ca3af; font-size: 0.875rem;">婕?2026 PictriKit. All rights reserved.</div>
+            <div style="color: #9ca3af; font-size: 0.875rem;">© 2026 PictriKit. All rights reserved.</div>
             <div style="display: flex; gap: 1.5rem; font-size: 0.875rem;">
                 <a href="/privacy.html">Privacy</a>
                 <a href="/terms.html">Terms</a>
