--- a/index.html
+++ b/index.html
@@ -513,18 +513,18 @@ Open Web Editor
 </div>
 
 <!-- Hero: Before vs After Comparison -->
-<div class="hero-comparison" style="margin: 3rem auto; max-width: 800px; padding: 0 1rem;">
-  <div style="display: flex; align-items: center; justify-content: center; gap: 2rem; flex-wrap: wrap;">
+<div class="hero-comparison" style="margin: 3rem auto; max-width: 1400px; padding: 0 1rem;">
+  <div style="display: flex; align-items: center; justify-content: center; gap: 2.5rem; flex-wrap: wrap;">
     
     <!-- Before -->
-    <div style="flex: 1; min-width: 280px; max-width: 350px;">
-      <div style="background: white; border-radius: 16px; padding: 1rem; box-shadow: 0 4px 20px rgba(0,0,0,0.08); border: 1px solid #e5e7eb;">
+    <div style="flex: 1; min-width: 380px; max-width: 560px;">
+      <div style="background: white; border-radius: 16px; padding: 1.25rem; box-shadow: 0 4px 20px rgba(0,0,0,0.08); border: 1px solid #e5e7eb;">
         <div style="display: flex; align-items: center; gap: 0.5rem; margin-bottom: 0.75rem;">
           <span style="width: 8px; height: 8px; background: #ef4444; border-radius: 50%;"></span>
           <span style="font-size: 0.8rem; font-weight: 600; color: #6b7280; text-transform: uppercase;">Before</span>
         </div>
-        <div style="background: #f8fafc; border-radius: 12px; overflow: hidden; aspect-ratio: 4/3;">
-          <img src="./assets/images/Snipaste_2026-01-12_19-40-58.png" alt="Before - Raw screenshots" style="width: 100%; height: 100%; object-fit: cover;" />
+        <div style="background: #f8fafc; border-radius: 12px; overflow: hidden;">
+          <img src="./assets/images/Snipaste_2026-01-12_19-40-58.png" alt="Before - Raw screenshots" style="width: 100%; height: auto; display: block;" />
         </div>
         <p style="font-size: 0.75rem; color: #9ca3af; text-align: center; margin-top: 0.75rem;">Scattered screenshots</p>
       </div>
@@ -537,14 +537,14 @@ Open Web Editor
     </div>
     
     <!-- After -->
-    <div style="flex: 1; min-width: 280px; max-width: 350px;">
-      <div style="background: white; border-radius: 16px; padding: 1rem; box-shadow: 0 8px 30px rgba(0,122,255,0.15); border: 2px solid #007AFF;">
+    <div style="flex: 1; min-width: 380px; max-width: 560px;">
+      <div style="background: white; border-radius: 16px; padding: 1.25rem; box-shadow: 0 8px 30px rgba(0,122,255,0.15); border: 2px solid #007AFF;">
         <div style="display: flex; align-items: center; gap: 0.5rem; margin-bottom: 0.75rem;">
           <span style="width: 8px; height: 8px; background: #10b981; border-radius: 50%;"></span>
           <span style="font-size: 0.8rem; font-weight: 600; color: #007AFF; text-transform: uppercase;">After</span>
         </div>
-        <div style="background: #f0f9ff; border-radius: 12px; overflow: hidden; aspect-ratio: 4/3;">
-          <img src="./assets/images/pictrikit-1768218106825.png" alt="After - Professional layout" style="width: 100%; height: 100%; object-fit: cover;" />
+        <div style="background: #f0f9ff; border-radius: 12px; overflow: hidden;">
+          <img src="./assets/images/pictrikit-1768218106825.png" alt="After - Professional layout" style="width: 100%; height: auto; display: block;" />
         </div>
         <p style="font-size: 0.75rem; color: #007AFF; text-align: center; margin-top: 0.75rem;">Clean, professional layout</p>
       </div>
