--- a/put-two-screenshots-together.html
+++ b/put-two-screenshots-together.html
@@ -11,7 +11,7 @@
 </script>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Put Two Screenshots Together 闂?Simple Side by Side Tool</title>
+    <title>Put Two Screenshots Together |Simple Side by Side Tool</title>
     <meta name="description" content="Put two screenshots together side by side or stacked. No design skills needed. Just upload two images and get one clean result.">
     <link rel="canonical" href="https://www.pictrikit.com/put-two-screenshots-together.html">
     
@@ -106,7 +106,7 @@
         .content h2 { font-size: 1.375rem; font-weight: 600; color: #111827; margin: 2.5rem 0 1rem; }
         .content ul { margin: 1rem 0 1.5rem 0; padding-left: 0; list-style: none; }
         .content ul li { padding: 0.5rem 0; padding-left: 1.5rem; position: relative; color: #475569; }
-        .content ul li::before { content: "闂?; position: absolute; left: 0; color: #007AFF; }
+        .content ul li::before { content: "|; position: absolute; left: 0; color: #007AFF; }
         .content ol { margin: 1rem 0 1.5rem 1.25rem; }
         .content ol li { padding: 0.375rem 0; color: #475569; }
         .example-image { margin: 2rem 0; border-radius: 0.75rem; overflow: hidden; box-shadow: 0 4px 20px rgba(0,0,0,0.08); border: 1px solid #e2e8f0; }
