--- a/screenshot-grid-layout.html
+++ b/screenshot-grid-layout.html
@@ -11,7 +11,7 @@
 </script>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Grid Layout for Multiple Screenshots 闂?Organize Images in Rows</title>
+    <title>Grid Layout for Multiple Screenshots |Organize Images in Rows</title>
     <meta name="description" content="Arrange multiple screenshots in a grid layout. Create 2x2, 2x3, or custom grids for organized image displays without manual alignment.">
     <link rel="canonical" href="https://www.pictrikit.com/screenshot-grid-layout.html">
     
@@ -106,7 +106,7 @@
         .content h2 { font-size: 1.375rem; font-weight: 600; color: #111827; margin: 2.5rem 0 1rem; }
         .content ul { margin: 1rem 0 1.5rem 0; padding-left: 0; list-style: none; }
         .content ul li { padding: 0.5rem 0; padding-left: 1.5rem; position: relative; color: #475569; }
-        .content ul li::before { content: "闂?; position: absolute; left: 0; color: #007AFF; }
+        .content ul li::before { content: "|; position: absolute; left: 0; color: #007AFF; }
         .content ol { margin: 1rem 0 1.5rem 1.25rem; }
         .content ol li { padding: 0.375rem 0; color: #475569; }
         .example-image { margin: 2rem 0; border-radius: 0.75rem; overflow: hidden; box-shadow: 0 4px 20px rgba(0,0,0,0.08); border: 1px solid #e2e8f0; }
@@ -182,7 +182,7 @@
             <p>Creating a grid manually means resizing each image to the same dimensions, calculating spacing, and aligning everything precisely. If one image is slightly larger or the gaps aren't consistent, the whole grid looks off. It's tedious work that takes attention away from your actual content.</p>
 
             <h2>Structured grids without the work</h2>
-            <p>With a grid layout tool, you choose the structure闂?x2, 2x3, 3x3闂傚倷鑳堕崑銊╁磿閺屻儱缁╂い銈囶梾 place your screenshots into it. The layout handles sizing and spacing automatically. Every cell is the same size, every gap is consistent, and every image is centered within its space.</p>
+            <p>With a grid layout tool, you choose the structure—2x2, 2x3, 3x3—and place your screenshots into it. The layout handles sizing and spacing automatically. Every cell is the same size, every gap is consistent, and every image is centered within its space.</p>
 
             <h2>What you can do</h2>
             <p>With grid layouts, you can:</p>
