--- a/templates.html
+++ b/templates.html
@@ -205,7 +205,7 @@
                         </div>
                     </div>
                     <div class="template-info">
-                        <h3>2閼? Grid</h3>
+                        <h3>2×2 Grid</h3>
                         <span>4 images in grid</span>
                     </div>
                 </a>
@@ -244,7 +244,7 @@
                 <span class="material-icons-round" style="color: #007AFF;">dashboard_customize</span>
                 <span style="font-weight: 700;">PictriKit</span>
             </div>
-            <div style="color: #9ca3af; font-size: 0.875rem;">濠?2026 PictriKit. All rights reserved.</div>
+            <div style="color: #9ca3af; font-size: 0.875rem;">© 2026 PictriKit. All rights reserved.</div>
             <div style="display: flex; gap: 1.5rem; font-size: 0.875rem;">
                 <a href="/privacy.html">Privacy</a>
                 <a href="/terms.html">Terms</a>
