--- a/feedback.html
+++ b/feedback.html
@@ -109,7 +109,7 @@
     
     /* Creator Pinned Card */
     .creator-pinned { background: linear-gradient(135deg, #fefce8 0%, #fef9c3 100%); border-radius: 12px; padding: 1.5rem; margin-bottom: 2rem; border: 1px solid #fde047; position: relative; }
-    .creator-pinned::before { content: '棣冩惗'; position: absolute; top: -8px; right: 16px; font-size: 1.25rem; }
+    .creator-pinned::before { content: '📌'; position: absolute; top: -8px; right: 16px; font-size: 1.25rem; }
     .creator-pinned-header { display: flex; align-items: center; gap: 0.75rem; margin-bottom: 1rem; }
     .creator-pinned-avatar { width: 40px; height: 40px; border-radius: 50%; background: linear-gradient(135deg, #f59e0b, #d97706); display: flex; align-items: center; justify-content: center; color: white; font-size: 1.125rem; }
     .creator-pinned-meta { flex: 1; }
@@ -179,7 +179,7 @@
       <!-- Creator Pinned Message -->
       <article class="creator-pinned" aria-label="Message from the creator">
         <header class="creator-pinned-header">
-          <div class="creator-pinned-avatar">棣冩啟</div>
+          <div class="creator-pinned-avatar">👤</div>
           <div class="creator-pinned-meta">
             <h3 class="creator-pinned-name">From the Creator <span class="creator-pinned-badge">Pinned</span></h3>
             <p class="creator-pinned-label">Why I built PictriKit</p>
