fix: toolbar click only selects visually, fix gap=0 export bug
Toolbar changes:
- Click on tool button only adds visual 'selected' state
- Hover always opens panel, mouse leave closes panel
- No locking behavior, simpler interaction

Export fix:
- Fixed gap/padding=0 being treated as undefined (0 || 12 = 12)
- Now correctly uses 0 when explicitly set to 0

--- a/app.html
+++ b/app.html
@@ -159,9 +159,8 @@
       color: var(--accent);
       box-shadow: inset 0 0 0 2px var(--accent);
     }
-    .tool-btn.locked { 
+    .tool-btn.selected { 
       background: var(--accent-light);
-      color: var(--accent);
       box-shadow: inset 0 0 0 2px var(--accent);
     }
     .tool-btn .material-symbols-outlined {
